Enhanced hls.js with a tsStreamIndex configuration. This gets passed through to the parser which has been enhanced to extract the stream from the MPEG-TS fragment at the given index (rather than an assumed single stream which would give you the last one). Also added a payloadCopy copy of the Event.FRAG_LOADED payload data because I found that the internal usage of this event quickly clears out the contents of the ArrayBuffer before the next listener in line gets a chance to read it.

--- a/demo/index.html
+++ b/demo/index.html
@@ -247,7 +247,7 @@ $(document).ready(function() {
       $("#HlsStatus").text('loading ' + url);
        events = { url : url, t0 : performance.now(), load : [], buffer : [], video : [], level : [], bitrate : []};
        recoverDecodingErrorDate = recoverSwapAudioCodecDate = null;
-       hls = new Hls({debug:true, enableWorker : enableWorker});
+       hls = new Hls({debug:true, enableWorker : enableWorker, tsStreamIndex: 1}); //tsStreamIndex custom config
        $("#HlsStatus").text('loading manifest and attaching video element...');
        hls.loadSource(url);
        hls.autoLevelCapping = levelCapping;
